# njord

./: Cargo.toml  Dockerfile
njord-cli/: Cargo.toml
njord-core/: Cargo.toml
njord-core/src/: geocoding.rs  lib.rs  util.rs  weather.rs
njord-core/src/weather/: met_no.rs  openweather.rs
njord-restful/: Cargo.toml
njord-restful/src/: api.rs  main.rs
