[package]
name = "njord-core"
version = "0.1.0"
authors = ["John Dowson <dowson.john.pony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["serde_json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
