[package]
name = "njord-restful"
version = "0.1.0"
authors = ["John Dowson <dowson.john.pony@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
njord-core = { path = "../njord-core" }
actix-web = "3"
env_logger = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["serde_json"] }
